fix: icon clipping

--- a/src/templates/currency-advancement-config.hbs
+++ b/src/templates/currency-advancement-config.hbs
@@ -5,7 +5,7 @@
       {{#each currencies as |currency|}}
         <th style="width:{{@root.currenciesWidthPercent}}%">
           <div style="display: flex; justify-content: center; align-items: center; gap: 4px; margin: 2px;">
-            <i data-tooltip="{{currency.label}}" style="background-image: url('{{currency.icon}}'); display: inline-block; width: 1em; height: 1em;"></i>
+            <i data-tooltip="{{currency.label}}" style="background-image: url('{{currency.icon}}'); display: inline-block; width: 1em; height: 1em; background-size: contain;"></i>
             <span>{{currency.label}}</span>
           </div>
         </th>
